# Hardware

./: CMakeLists.txt  FilePortal.h  Makefile  README.md  picoX21H.h  picoX7.h
Device/: Audio.h  Buttons.h  Dac.h  Devices.h  Display.h  EPaper.h  Lcd.h  Led.h  Led7Seg.h  TempSense.h  UsbFile.h  UsbFileMidi.h
Device/Test/: TestButtons.h  TestEPaper.h
Device/native/: Buttons.h  Lcd.h  Led.h  Panel.h  Rack.h  ScaledFrame.h
Test/: CMakeLists.txt  test_picoX21H.cpp  test_picoX7.cpp
blinky/: CMakeLists.txt  Config.h
picoGame/: CMakeLists.txt  Config.h  README.md  example.cpp
picoSense/: CMakeLists.txt  Config.h  README.md  example.cpp  test.cpp  test_picoSense.cpp
picoSense/Test/: CMakeLists.txt  test_picoSense.cpp
picoX21H/: CMakeLists.txt  Config.h  README.md
picoX21H/Test/: CMakeLists.txt  test_picoX21H.cpp
picoX7/: CMakeLists.txt  Config.h  README.md  test.cpp
picoX7/Test/: CMakeLists.txt  test_picoX7.cpp
